@@ -1,0 +1,35 @@
+/*
+ * Copyright 2006 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.ws.soap;
+
+import javax.xml.transform.Result;
+
+/**
+ * Represents the content for an individual SOAP detail entry in a SOAP Message.  All
+ * <code>SoapFaultDetailElement</code>s are contained in a <code>SoapDetail</code>.
+ *
+ * @author Arjen Poutsma
+ * @see SoapFaultDetail
+ */
+public interface SoapFaultDetailElement extends SoapElement {
+
+    /**
+     * Returns a <code>Result</code> that allows for writing to the <strong>contents</strong> of the detail element.
+     */
+    Result getResult();
+
+}
